# olj

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  MARKET_INTELLIGENCE.md  README.md  allskills.json  allskills_id_mapping.json  allskills_tree.json  allskills_tree_clean.json  index.html  insights_engine.py  job_posting_scraper.py  job_scraper_enhanced.py  pyproject.toml  run_and_deploy.sh  show_insights.py  skills_mindmap.html  skills_with_jobs_current.json  start_server.sh  stats.html  stats.json  ultra_advanced_analysis_20250714_234448.json  ultra_advanced_analysis_20250714_234503.json  ultra_advanced_job_analysis.py  wrangler.toml
jobs/: 1037964.json  1039038.json  1039602.json  1061581.json  1079353.json  1090306.json  1091561.json  1103517.json  1109332.json  1113299.json  1115427.json  1120634.json  1125335.json  1133164.json  1142596.json  1152202.json  1152203.json  1152660.json  1152670.json  1165733.json  1166437.json  1168722.json  1169214.json  1180275.json  1187434.json  1195315.json  1198384.json  1201484.json  1202401.json  1205137.json  1206161.json  1208016.json  1208657.json  1211513.json  1217315.json  1221242.json  1232734.json  1234648.json  1237307.json  1237436.json  (+1825 more)
