[project]
name = "onlinejobs-skills-scraper"
version = "0.1.0"
description = "Scraper for OnlineJobs.ph to fetch job counts for skills visualization"
readme = "README_UPSKILLING.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[tool.uv]
dev-dependencies = []